--- a/HardwareTesting/HardwareTesting.csproj
+++ b/HardwareTesting/HardwareTesting.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="tstOrderLineCollection.cs" />
     <Compile Include="tstStaff.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -61,6 +62,7 @@
     </Compile>
     <Compile Include="tstOrder.cs" />
     <Compile Include="tstOrderLine.cs" />
+    <Compile Include="tstOrderCollection.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
