Alot Like weeks 18-24 -Added all front end -Added Validation -Added Find and Add method -Added Delete Method -Added front end for all the above methods -Added Collection class -Added all tests for collection

--- a/HardwareTesting/HardwareTesting.csproj
+++ b/HardwareTesting/HardwareTesting.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Factories\clsStaffFactory.cs" />
     <Compile Include="tstStaff.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="tstStaffCollection.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
