--- a/HardwareClasses/HardwareClasses.csproj
+++ b/HardwareClasses/HardwareClasses.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Compile Include="clsDataConnection.cs" />
     <Compile Include="clsStaff.cs" />
+    <Compile Include="clsStaffCollection.cs" />
+    <Compile Include="clsStaffFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
